Complted writing of test
